OCaml 4.03.0:
-------------

(Changes that can break existing programs are marked with a "*")

Language features:
- PR#6374: allow "_ t" as a short-hand for "(_, _, ..) t" for n-ary type
  constructors (Alain Frisch)
- allow field punning in object copying expressions: {< x; >} for {< x = x; >}
  (Jeremy Yallop)
* Custom index operators: ( .() ), ( .[] ), ( .{} ) etc.
  (user 'Octachron')
  The syntax "foo.(bar) <- baz" now desugars into "( .()<- ) foo bar baz"; this
  should allow user to define their own notations by overriding.
  The bigarray notations ( .{} ), ( .{,} ) etc. are defined in the Bigarray
  module, which means that the foo.{bar,baz} syntactic sugar is only available
  when the Bigarray module is opened; this can break existing programs,
  which should be fixed by opening the Bigarray module.

Compilers:
- PR#6501: harden the native-code generator against certain uses of "%identity"
  (Xavier Leroy, report by Antoine Miné).
- PR#6475: accept -o in ocamlc when compiling C files
  (Vincent Laporte, Peter Zotov)
- improve type-specialization of unapplied primitives
  (Frédéric Bour, review by Gabriel Scherer)

Runtime system:
- PR#6517: use ISO C99 types {,u}int{32,64}_t in preference to our homegrown
  types {,u}int{32,64}.
  (Xavier Leroy)

Standard library:
* PR#6494: Add equal function in modules
  Bytes, Char, Digest, Int32, Int64, Nativeint, and String
  (Romain Calascibetta)
- PR#6577: improve performance of %L, %l, %n, %S, %C format specifiers
  (Alain Frisch)
- PR#6585: fix memory leak in win32unix/createprocess.c
- PR#6694, PR#6695: deprecate functions using ISO-8859-1 character set
  in Char, Bytes, String and provide alternatives using US-ASCII.
  (Peter Zotov)
- expose Sys.{int_size,max_wosize} for improved js_of_ocaml portability
  (Hugo Heuzard)
* Filename: Optional ?perms argument to open_temp_file
  (Daniel Bünzli, review by Jacques-Pascal Deplaix)

Type system: